--- a/HealthCareSystem/nbproject/project.properties
+++ b/HealthCareSystem/nbproject/project.properties
@@ -33,11 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/HealthCareSystem
 excludes=
+file.reference.jcalendar-1.1.4.jar=C:\\Users\\Maria\\Desktop\\Final Project\\jcalendar-1.1.4.jar
 file.reference.KGradientPanel.jar=C:\\Users\\Maria\\Desktop\\Final Project\\KGradientPanel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.KGradientPanel.jar}
+    ${file.reference.KGradientPanel.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
