--- a/HealthCareSystem/nbproject/project.properties
+++ b/HealthCareSystem/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.jcalendar-1.1.4.jar=C:\\Users\\Maria\\Desktop\\Final Project\\jca
 file.reference.jcalendar-1.1.4.jar-1=C:\\Users\\hp\\Downloads\\jcalendar-1.1.4.jar
 file.reference.KGradientPanel.jar=C:\\Users\\Maria\\Desktop\\Final Project\\KGradientPanel.jar
 file.reference.KGradientPanel.jar-1=C:\\Users\\hp\\Downloads\\Library (2)\\KGradientPanel.jar
+file.reference.KGradientPanel.jar-2=C:\\Users\\Maria\\Desktop\\Final Project\\KGradientPanel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +45,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.1.4.jar}:\
     ${file.reference.KGradientPanel.jar-1}:\
-    ${file.reference.jcalendar-1.1.4.jar-1}
+    ${file.reference.jcalendar-1.1.4.jar-1}:\
+    ${file.reference.KGradientPanel.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
