--- a/HealthCareSystem/nbproject/private/private.properties
+++ b/HealthCareSystem/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 file.reference.KGradientPanel.jar=D:\\CS162S21GID09
-user.properties.file=C:\\Users\\hp\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\Maria\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
