--- a/HealthCareSystem/nbproject/project.properties
+++ b/HealthCareSystem/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.jcalendar-1.1.4.jar-1=C:\\Users\\hp\\Downloads\\jcalendar-1.1.4.j
 file.reference.KGradientPanel.jar=C:\\Users\\Maria\\Desktop\\Final Project\\KGradientPanel.jar
 file.reference.KGradientPanel.jar-1=C:\\Users\\hp\\Downloads\\Library (2)\\KGradientPanel.jar
 file.reference.KGradientPanel.jar-2=C:\\Users\\Maria\\Desktop\\Final Project\\KGradientPanel.jar
+file.reference.mail.jar=C:\\Users\\hp\\Desktop\\javamail-1.4.7\\mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,7 +47,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.1.4.jar}:\
     ${file.reference.KGradientPanel.jar-1}:\
     ${file.reference.jcalendar-1.1.4.jar-1}:\
-    ${file.reference.KGradientPanel.jar-2}
+    ${file.reference.KGradientPanel.jar-2}:\
+    ${file.reference.mail.jar}:\
+    ${libs.CopyLibs.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
