--- a/HealthCareSystem/nbproject/project.properties
+++ b/HealthCareSystem/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.KGradientPanel.jar=C:\\Users\\Maria\\Desktop\\Final Project\\KGra
 file.reference.KGradientPanel.jar-1=C:\\Users\\hp\\Downloads\\Library (2)\\KGradientPanel.jar
 file.reference.KGradientPanel.jar-2=C:\\Users\\Maria\\Desktop\\Final Project\\KGradientPanel.jar
 file.reference.mail.jar=C:\\Users\\hp\\Desktop\\javamail-1.4.7\\mail.jar
+file.reference.mail.jar-1=C:\\Users\\Maria\\Downloads\\javamail-1.4.7\\mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.1.4.jar-1}:\
     ${file.reference.KGradientPanel.jar-2}:\
     ${file.reference.mail.jar}:\
-    ${libs.CopyLibs.classpath}
+    ${libs.CopyLibs.classpath}:\
+    ${file.reference.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
